--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,9 +1,44 @@
-<h1>Students#index</h1>
-<p>Find me in app/views/students/index.html.erb</p>
-<% @tbl_students.each do |student| %>
-	<ul>
-		<li><%= student.id %></li>
-		<li><%= student.studentID %></li>
-		<li><%= student.name %></li>
-	</ul>
-<% end %>
+<script type="text/javascript">
+    function UserController($scope, $http) {
+        $http.get('http://localhost:3000/students/liststudent').success(function(data) {
+            $scope.users = data;
+        });
+    }
+</script>
+<h1>Test</h1>
+
+<h1><center>Quản lý người dùng</center></h1>
+<div class="container-fluid" ng-controller="UserController">
+    <div class="container">
+        <table class="table table-bordered" >
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Picture</th>
+                    <th>Age</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="user in users">
+                    <td>{{user.id}}</td>
+                    <td>{{user.name}}</td>
+                    <td>{{user.picture}}</td>
+                    <td>{{user.age}}</td>
+                   
+                    <td>
+                        <a data-toggle="modal" data-target="#view-{{user.id}}">
+                            <i class="glyphicon glyphicon-eye-open"></i>
+                        </a>                 
+                        <a data-toggle="modal" data-target="#edit-{{user.id}}" style="padding-left: 5px; padding-right: 5px;">
+                            <i class="glyphicon glyphicon-pencil"></i>
+                        </a                     
+                        <a>
+                            
+                        </a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
