--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,13 +1,13 @@
 <script type="text/javascript">
-  function UserController($scope, $http) {
+  function CourseController($scope, $http) {
     $http.get('http://localhost:3000/courses.json').success(function(data) {
-      $scope.users = data;
+      $scope.courses = data;
       console.log(data);
     });
   }
 </script>
 <h1><center>Courses</center></h1>
-<div class="container-fluid" ng-controller="UserController">
+<div class="container-fluid" ng-controller="CourseController">
   <div class="container">
     <table class="table table-bordered" >
       <thead>
@@ -15,13 +15,63 @@
           <th>ID Course</th>
           <th>Course's Name</th>
           <th>Course's Code</th>
+          <th>Option</th>
         </tr>
       </thead>
       <tbody>
-        <tr ng-repeat="user in users">
-          <td>{{user.course.id}}</td>
-          <td>{{user.course.name}}</td>
-          <td>{{user.course.code}}</td>
+        <tr ng-repeat="course in courses">
+          <td>{{course.course.id}}</td>
+          <td>{{course.course.name}}</td>
+          <td>{{course.course.code}}</td>
+             <td>
+                        <a data-toggle="modal" data-target="#view-{{course.course_id}}" >
+                            <i class="glyphicon glyphicon-eye-open"></i>
+                        </a>
+                        <div class="modal fade" id="view-{{course.course_id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                        <h4 class="modal-title" id="myModalLabel">Course Detail: {{course.course.name}}</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                <div class="portlet">                                                 
+                                                    <div class="form-body">
+                                                        <div class="form-group">
+                                                            <label for=" ">ID Course:</label>
+                                                            <span>{{course.course.id}}</span>
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <label for=" ">Course's Name:</label>
+                                                            <span>{{course.course.name}}</span>
+                                                        </div>
+                                                       
+                                                        <div class="form-group">
+                                                            <label for=" ">Course's Code:</label>
+                                                            <span>{{course.course.code}}</span>
+                                                        </div>                                                    
+                                                        <div class="modal-footer">
+                                                            <button type="button" data-dismiss="modal" class="btn btn-default">Cancel</button>
+                                                        </div>
+                                                    </div>
+                                                </div
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        </div>
+                        <a data-toggle="modal" data-target="#edit-{{course.course.id}}" style="padding-left: 5px; padding-right: 5px;">
+                            <i class="glyphicon glyphicon-pencil"></i>
+                        </a>
+                        
+                        <a>
+                            <i class="glyphicon glyphicon-trash" ng-click="removeRow(course.course.id)"></i>
+                        </a>
+                    </td>
         </tr>
       </tbody>
     </table>
