--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -19,10 +19,11 @@
         </tr>
       </thead>
       <tbody>
-        <tr ng-repeat="course in courses">
-          <td>{{course.course.id}}</td>
-          <td>{{course.course.name}}</td>
-          <td>{{course.course.code}}</td>
+        <% @courses.each do |course| %>
+          <tr>
+          <td><%= course.id %></td>
+          <td><%= course.name %></td>
+          <td><%= course.code %></td>
              <td>
                         <a data-toggle="modal" data-target="#view-{{course.course_id}}" >
                             <i class="glyphicon glyphicon-eye-open"></i>
@@ -41,16 +42,16 @@
                                                     <div class="form-body">
                                                         <div class="form-group">
                                                             <label for=" ">ID Course:</label>
-                                                            <span>{{course.course.id}}</span>
+                                                            <span><%= course.id %></span>
                                                         </div>
                                                         <div class="form-group">
                                                             <label for=" ">Course's Name:</label>
-                                                            <span>{{course.course.name}}</span>
+                                                            <span><%= course.name %></span>
                                                         </div>
                                                        
                                                         <div class="form-group">
                                                             <label for=" ">Course's Code:</label>
-                                                            <span>{{course.course.code}}</span>
+                                                            <span><%= course.code %></span>
                                                         </div>                                                    
                                                         <div class="modal-footer">
                                                             <button type="button" data-dismiss="modal" class="btn btn-default">Cancel</button>
@@ -68,13 +69,19 @@
                             <i class="glyphicon glyphicon-pencil"></i>
                         </a>
                         
-                        <a>
-                            <i class="glyphicon glyphicon-trash" ng-click="removeRow(course.course.id)"></i>
-                        </a>
+                        <%= link_to '<i class="glyphicon glyphicon-trash" ></i>'.html_safe,
+                            course,
+                            method: :delete,
+                            data: { confirm: "Are you sure you want to delete this course?"
+                        } %>
+                          
+                        
                     </td>
         </tr>
+        <% end %>
       </tbody>
     </table>
+
   </div>
 </div>
 
